Archive2/8e/388bb2a65560ea/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:42:50: error: could not convert 'f' from 'void (*)(int, std::string) {aka void (*)(int, std::basic_string<char>)}' to 'std::function<void(int, std::basic_string<char>, int, int)>'
     dispatcher<int, std::string, int, int> disp{f};
                                                  ^
